--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <script>
-    document.addEventListener('contextmenu', function (event) {
-      event.preventDefault();
-    });
-
-    document.addEventListener('keydown', function (event) {
-      if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
-        event.preventDefault();
-      }
-    });
+    // document.addEventListener('contextmenu', function (event) {
+      // event.preventDefault();
+    // });
+// 
+    // document.addEventListener('keydown', function (event) {
+      // // if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
+        // event.preventDefault();
+      // }
+    // });
 
   </script>
 </body>
