--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NameLix 360° Insurance</title>
+  <title>NameLix 360° Insurance | Smart Insurance for a Secure Tomorrow</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="shortcut icon" href="/brand.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/Untitled_design_1.png" type="image/x-icon">
 </head>
 
 <body>
@@ -17,13 +19,13 @@
   <script type="module" src="/src/main.tsx"></script>
   <script>
     // document.addEventListener('contextmenu', function (event) {
-      // event.preventDefault();
+    // event.preventDefault();
     // });
-// 
+    // 
     // document.addEventListener('keydown', function (event) {
-      // // if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
-        // event.preventDefault();
-      // }
+    // // if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
+    // event.preventDefault();
+    // }
     // });
 
   </script>
