added err boundary

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NameLix 360° Insurance | Smart Insurance for a Secure Tomorrow</title>
+  <meta name="description" content="Find affordable and reliable insurance coverage for your home, car, life, and more. Compare quotes, choose from top providers, and get the protection you need with NameLix 360° Insurance.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
