added add employee

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NameLix 360° Insurance | Smart Insurance for a Secure Tomorrow</title>
-  <meta name="description" content="Find affordable and reliable insurance coverage for your home, car, life, and more. Compare quotes, choose from top providers, and get the protection you need with NameLix 360° Insurance.">
+  <meta name="description"
+    content="Find affordable and reliable insurance coverage for your home, car, life, and more. Compare quotes, choose from top providers, and get the protection you need with NameLix 360° Insurance.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -19,16 +20,6 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <script>
-    // document.addEventListener('contextmenu', function (event) {
-    // event.preventDefault();
-    // });
-    // 
-    // document.addEventListener('keydown', function (event) {
-    // // if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
-    // event.preventDefault();
-    // }
-    // });
-
   </script>
 </body>
 
