--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>NameLix 360° Insurance | Smart Insurance for a Secure Tomorrow</title>
   <meta name="description"
     content="Find affordable and reliable insurance coverage for your home, car, life, and more. Compare quotes, choose from top providers, and get the protection you need with NameLix 360° Insurance.">
+<meta name="google-site-verification" content="WhGP_MmRG-oT4bz8753tQ0aybpeT_6yaHQ2UTR_6A4s" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
