--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NameLix 360° Insurance | Smart Insurance for a Secure Tomorrow</title>
+  <title>Gemini AI</title>
   <meta name="description"
-    content="Find affordable and reliable insurance coverage for your home, car, life, and more. Compare quotes, choose from top providers, and get the protection you need with NameLix 360° Insurance.">
-<meta name="google-site-verification" content="WhGP_MmRG-oT4bz8753tQ0aybpeT_6yaHQ2UTR_6A4s" />
+    content="An intelligent, conversational AI designed to understand user intent, provide accurate responses, and deliver seamless, human-like interactions across a variety of topics and services.">
+  <meta name="google-site-verification" content="WhGP_MmRG-oT4bz8753tQ0aybpeT_6yaHQ2UTR_6A4s" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="shortcut icon" href="/Untitled_design_1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://gemini.google/images/spark_4c.png" type="image/x-icon">
 </head>
 
 <body>
