added theme changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gemini AI</title>
+  <title>Cipherbot AI</title>
   <meta name="description"
     content="An intelligent, conversational AI designed to understand user intent, provide accurate responses, and deliver seamless, human-like interactions across a variety of topics and services.">
   <meta name="google-site-verification" content="WhGP_MmRG-oT4bz8753tQ0aybpeT_6yaHQ2UTR_6A4s" />
